# image-demo

./: README.md  main.py  pyproject.toml
Image/: pyproject.toml
Image/src/image/: Image.py  __init__.py
Image/tests/: test_Image.py
ImageDemos/: main.py  pyproject.toml
